# pywis-pubsub

./: README.md  pyproject.toml  pywis-pubsub-config.yml  setup.py
.github/workflows/: flake8.yml  test-publish-subscribe-download.yml
debian/: changelog  control  copyright
pywis_pubsub/: __init__.py  cli_options.py  ets.py  kpi.py  publish.py  subscribe.py  util.py
tests/: run_tests.py  test_invalid_uuid.json
