[build-system]
requires = ["setuptools>=46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywis-pubsub"
version = "0.13.dev0"
description = "pywis-pubsub provides subscription and download capability of WMO data from WIS2 infrastructure services"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["WIS2", "Pub/Sub", "broker", "topic"]
authors = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
]
maintainers = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
dependencies = [
    "click",
    "jsonschema",
    "paho-mqtt",
    "pyyaml",
    "requests",
    "shapely"
]

[project.optional-dependencies]
dev = ["flake8"]
test = ["requests"]
release = ["build", "twine", "wheel"]
s3 = ["boto3"]

[project.scripts]
pywis-pubsub = "pywis_pubsub:cli"

[project.urls]
homepage = "https://github.com/World-Meteorological-Organization/pywis-pubsub"
source = "https://github.com/World-Meteorological-Organization/pywis-pubsub"
documentation = "https://github.com/World-Meteorological-Organization/pywis-pubsub"
issues = "https://github.com/World-Meteorological-Organization/pywis-pubsub/issues"
